--- a/模板说明.md
+++ b/模板说明.md
@@ -1,3 +1,6 @@
 # 基于vue-element-admin的猎吧后台系统模板
 
-1、封装了表格全局mixins（目录mixin），固定的筛选条件和固定的tableData。注意：固定的列表请求方法名getList
+1、封装了表格全局mixins（目录mixin），固定的筛选条件和固定的tableData。
+
+注意：固定的列表请求方法名getList（如需权限菜单，请参照源码的src/permission.js）
+
